--- a/spring-batch-docs/asciidoc/spring-batch-integration.adoc
+++ b/spring-batch-docs/asciidoc/spring-batch-integration.adoc
@@ -6,6 +6,8 @@
 
 == Spring Batch Integration
 
+include::toggle.adoc[]
+
 [[spring-batch-integration-introduction]]
 
 === Spring Batch Integration Introduction
@@ -38,10 +40,10 @@ provide methods to distribute workloads over a number of workers.
 
 This section covers the following key concepts:
 
+[role="xmlContent"]
 * <<spring-batch-integration.adoc#namespace-support,Namespace Support>>
 
-
-
+[[continue-section-list]]
 * <<spring-batch-integration.adoc#launching-batch-jobs-through-messages,Launching Batch Jobs through Messages>>
 
 
@@ -59,7 +61,7 @@ Batch Process Execution>>
 
 
 [[namespace-support]]
-
+[role="xmlContent"]
 ==== Namespace Support
 
 Since Spring Batch Integration 1.3, dedicated XML Namespace
@@ -265,7 +267,8 @@ launch the job via the __Job Launching Gateway__, and then log the output of the
 `JobExecution` with the
 `logging-channel-adapter`.
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <int:channel id="inboundFileChannel"/>
 <int:channel id="outboundJobRequestChannel"/>
@@ -292,6 +295,70 @@ launch the job via the __Job Launching Gateway__, and then log the output of the
 <int:logging-channel-adapter channel="jobLaunchReplyChannel"/>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public FileMessageToJobRequest fileMessageToJobRequest() {
+    FileMessageToJobRequest fileMessageToJobRequest = new FileMessageToJobRequest();
+    fileMessageToJobRequest.setFileParameterName("input.file.name");
+    fileMessageToJobRequest.setJob(personJob());
+    return fileMessageToJobRequest;
+}
+
+@Bean
+public DirectChannel inboundFileChannel() {
+    return new DirectChannel();
+}
+
+@Bean
+public DirectChannel outboundJobRequestChannel() {
+    return new DirectChannel();
+}
+
+@Bean
+public DirectChannel jobLaunchReplyChannel() {
+    return new DirectChannel();
+}
+
+@Bean
+public FileReadingMessageSource fileReader() {
+    FileReadingMessageSource source = new FileReadingMessageSource();
+    source.setDirectory(new File("/tmp/myfiles"));
+    source.setFilter(new SimplePatternFileListFilter("*.csv"));
+    return source;
+}
+
+@Bean
+public JobLaunchingGateway jobLaunchingGateway() {
+    SimpleJobLauncher simpleJobLauncher = new SimpleJobLauncher();
+    simpleJobLauncher.setJobRepository(jobRepository);
+    simpleJobLauncher.setTaskExecutor(new SyncTaskExecutor());
+    JobLaunchingGateway jobLaunchingGateway = new JobLaunchingGateway(simpleJobLauncher);
+    return jobLaunchingGateway;
+}
+
+@Bean
+public LoggingHandler logging() {
+    LoggingHandler adapter = new LoggingHandler(LoggingHandler.Level.DEBUG);
+    adapter.setLoggerName("TEST_LOGGER");
+    adapter.setLogExpressionString("headers.id + ': ' + payload");
+    return adapter;
+}
+
+@Bean
+public IntegrationFlow integrationFlow(JobLaunchingGateway jobLaunchingGateway) {
+    return IntegrationFlows.from(fileReader(),
+            c -> c.poller(Pollers.fixedRate(1000).maxMessagesPerPoll(1)))
+            .channel(inboundFileChannel()).
+                    handle(fileMessageToJobRequest()).
+                    channel(outboundJobRequestChannel()).
+                    handle(jobLaunchingGateway).
+                    channel(jobLaunchReplyChannel()).
+                    handle(logging())
+            .get();
+}
+----
 
 
 [[example-itemreader-configuration]]
@@ -303,7 +370,8 @@ configure our Spring Batch
 `ItemReader` (for example) to use the files found at the location defined
 by the job parameter called "input.file.name", as shown in the following bean configuration:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="itemReader" class="org.springframework.batch.item.file.FlatFileItemReader"
     scope="step">
@@ -312,6 +380,19 @@ by the job parameter called "input.file.name", as shown in the following bean co
 </bean>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+@StepScope
+public ItemReader sampleReader(@Value("#{jobParameters[input.file.name]}") String resource) {
+...
+    FlatFileItemReader flatFileItemReader = new FlatFileItemReader();
+    flatFileItemReader.setResource(new FileSystemResource(resource));
+...
+    return flatFileItemReader;
+}
+----
 
 The main points of interest in the preceding example are injecting the value of
 `#{jobParameters['input.file.name']}`
@@ -364,12 +445,26 @@ When this `Gateway` is receiving messages from a
 `PollableChannel`, you must either provide
 a global default `Poller` or provide a `Poller` sub-element to the
 `Job Launching Gateway`, as shown in the following example:
-[source, xml]
+
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <batch-int:job-launching-gateway request-channel="queueChannel"
     reply-channel="replyChannel" job-launcher="jobLauncher">
   <int:poller fixed-rate="1000">
 </batch-int:job-launching-gateway>
+----
+
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+@ServiceActivator(inputChannel = "queueChannel", poller = @Poller(fixedRate="1000"))
+public JobLaunchingGateway sampleJobLaunchingGateway() {
+    JobLaunchingGateway jobLaunchingGateway = new JobLaunchingGateway(jobLauncher());
+    jobLaunchingGateway.setOutputChannel(replyChannel());
+    return jobLaunchingGateway;
+}
 ----
 
 [[providing-feedback-with-informational-messages]]
@@ -428,7 +523,8 @@ message to a `Gateway` for a
 
 First, create the notification integration beans:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <int:channel id="stepExecutionsChannel"/>
 
@@ -439,10 +535,32 @@ First, create the notification integration beans:
 <int:logging-channel-adapter channel="stepExecutionsChannel"/>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+@ServiceActivator(inputChannel = "stepExecutionsChannel")
+public LoggingHandler loggingHandler() {
+    LoggingHandler adapter = new LoggingHandler(LoggingHandler.Level.WARN);
+    adapter.setLoggerName("TEST_LOGGER");
+    adapter.setLogExpressionString("headers.id + ': ' + payload");
+    return adapter;
+}
+
+@MessagingGateway(name = "notificationExecutionsListener", defaultRequestChannel = "stepExecutionsChannel")
+public interface NotificationExecutionListener extends StepExecutionListener {}
+
+----
+
+[role="javaContent"]
+NOTE: You will need to add the `@IntegrationComponentScan` annotation to your configuration.
+
+[[message-gateway-entry-list]]
 
 Second, modify your job to add a step-level listener:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <job id="importPayments">
     <step id="step1">
@@ -455,6 +573,18 @@ Second, modify your job to add a step-level listener:
         ...
     </step>
 </job>
+----
+
+.Java Configuration
+[source, java, role="javaContent"]
+----
+public Job importPaymentsJob() {
+    return jobBuilderFactory.get("importPayments")
+        .start(stepBuilderFactory.get("step1")
+                .chunk(200)
+                .listener(notificationExecutionsListener())
+                ...
+}
 ----
 
 [[asynchronous-processors]]
@@ -482,8 +612,8 @@ writes back the chunk as soon as all the results become available.
 The following example shows how to configuration the `AsyncItemProcessor`:
 
 
-
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="processor"
     class="org.springframework.batch.integration.async.AsyncItemProcessor">
@@ -496,6 +626,17 @@ The following example shows how to configuration the `AsyncItemProcessor`:
 </bean>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public AsyncItemProcessor processor(ItemProcessor itemProcessor, TaskExecutor taskExecutor) {
+    AsyncItemProcessor asyncItemProcessor = new AsyncItemProcessor();
+    asyncItemProcessor.setTaskExecutor(taskExecutor);
+    asyncItemProcessor.setDelegate(itemProcessor);
+    return asyncItemProcessor;
+}
+----
 
 The `delegate` property refers
 to your `ItemProcessor` bean, and
@@ -504,7 +645,8 @@ refers to the `TaskExecutor` of your choice.
 
 The following example shows how to configure the `AsyncItemWriter`:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="itemWriter"
     class="org.springframework.batch.integration.async.AsyncItemWriter">
@@ -514,6 +656,16 @@ The following example shows how to configure the `AsyncItemWriter`:
 </bean>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public AsyncItemWriter processor(ItemWriter itemWriter) {
+    AsyncItemWriter asyncItemWriter = new AsyncItemWriter();
+    asyncItemWriter.setDelegate(itemWriter);
+    return asyncItemWriter;
+}
+----
 
 Again, the `delegate` property is
 actually a reference to your `ItemWriter` bean.
@@ -569,7 +721,8 @@ external systems for processing.
 A simple job with a step to be remotely chunked might have a
 configuration similar to the following:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <job id="personJob">
   <step id="step1">
@@ -579,6 +732,20 @@ configuration similar to the following:
     ...
   </step>
 </job>
+----
+
+.Java Configuration
+[source, java, role="javaContent"]
+----
+public Job chunkJob(ItemReader itemReader) {
+     return jobBuilderFactory.get("personJob")
+             .start(stepBuilderFactory.get("step1")
+                     .chunk(200)
+                     .reader(itemReader())
+                     .writer(itemWriter())
+                     .build())
+             .build();
+ }
 ----
 
 The `ItemReader` reference points to the bean you want
@@ -591,7 +758,8 @@ following configuration provides a basic master setup. You
 should check any additional component properties, such as
 throttle limits and so on, when implementing your use case.
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="connectionFactory" class="org.apache.activemq.ActiveMQConnectionFactory">
   <property name="brokerURL" value="tcp://localhost:61616"/>
@@ -627,6 +795,80 @@ throttle limits and so on, when implementing your use case.
     channel="replies"/>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public org.apache.activemq.ActiveMQConnectionFactory connectionFactory() {
+	ActiveMQConnectionFactory factory = new ActiveMQConnectionFactory();
+	factory.setBrokerURL("tcp://localhost:61616");
+	return factory;
+}
+
+@Bean
+public DirectChannel requests() {
+	return new DirectChannel();
+}
+
+@Bean
+public QueueChannel replies() {
+	return new QueueChannel();
+}
+
+
+@Bean
+public MessagingTemplate messagingTemplate() {
+	MessagingTemplate template = new MessagingTemplate();
+	template.setDefaultChannel(requests());
+	template.setReceiveTimeout(2000);
+	return template;
+}
+
+@Bean
+@ServiceActivator(inputChannel = "requests")
+public JmsSendingMessageHandler jmsOutboundChannelAdapter() {
+	JmsSendingMessageHandler jmsSendingMessageHandler = new JmsSendingMessageHandler(jmsTemplate());
+	jmsSendingMessageHandler.setDestinationName("requests");
+	return jmsSendingMessageHandler;
+}
+
+@Bean
+@StepScope()
+public ChunkMessageChannelItemWriter itemWriter() {
+	ChunkMessageChannelItemWriter chunkMessageChannelItemWriter = new ChunkMessageChannelItemWriter();
+	chunkMessageChannelItemWriter.setMessagingOperations(messagingTemplate());
+	chunkMessageChannelItemWriter.setReplyChannel(replies());
+	return chunkMessageChannelItemWriter;
+}
+
+@Bean
+public RemoteChunkHandlerFactoryBean chunkHandler() {
+	RemoteChunkHandlerFactoryBean remoteChunkHandlerFactoryBean = new RemoteChunkHandlerFactoryBean();
+	remoteChunkHandlerFactoryBean.setChunkWriter(itemWriter());
+	remoteChunkHandlerFactoryBean.setStep(step1());
+	return remoteChunkHandlerFactoryBean;
+}
+
+@Bean
+public DefaultMessageListenerContainer defaultMessageListenerContainer() {
+	DefaultMessageListenerContainer defaultMessageListenerContainer = new DefaultMessageListenerContainer();
+	defaultMessageListenerContainer.setDestinationName("replies");
+	return defaultMessageListenerContainer;
+}
+
+@Bean
+public ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener() {
+	ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener = new  ChannelPublishingJmsMessageListener();
+	return channelPublishingJmsMessageListener;
+}
+
+@Bean
+public JmsMessageDrivenEndpoint jmsReplies() {
+	JmsMessageDrivenEndpoint jmsMessageDrivenEndpoint = new JmsMessageDrivenEndpoint(defaultMessageListenerContainer(), channelPublishingJmsMessageListener());
+	jmsMessageDrivenEndpoint.setOutputChannel(replies());
+	return jmsMessageDrivenEndpoint;
+}
+----
 
 The preceding configuration provides us with a number of beans. We
 configure our messaging middleware using ActiveMQ and the
@@ -639,8 +881,8 @@ configured middleware.
 Now we can move on to the slave configuration, as shown in the following example:
 
 
-
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="connectionFactory" class="org.apache.activemq.ActiveMQConnectionFactory">
   <property name="brokerURL" value="tcp://localhost:61616"/>
@@ -679,6 +921,67 @@ Now we can move on to the slave configuration, as shown in the following example
 </bean>
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public org.apache.activemq.ActiveMQConnectionFactory connectionFactory() {
+	ActiveMQConnectionFactory factory = new ActiveMQConnectionFactory();
+	factory.setBrokerURL("tcp://localhost:61616");
+	return factory;
+}
+
+@Bean
+public DirectChannel requests() {
+	return new DirectChannel();
+}
+
+@Bean
+public DirectChannel replies() {
+	return new DirectChannel();
+}
+
+@Bean
+public DefaultMessageListenerContainer defaultMessageListenerContainer() {
+	DefaultMessageListenerContainer defaultMessageListenerContainer = new DefaultMessageListenerContainer();
+	defaultMessageListenerContainer.setDestinationName("requests");
+	return defaultMessageListenerContainer;
+}
+
+@Bean
+public ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener() {
+	ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener = new  ChannelPublishingJmsMessageListener();
+	return channelPublishingJmsMessageListener;
+}
+
+@Bean
+public JmsMessageDrivenEndpoint jmsIn() {
+	JmsMessageDrivenEndpoint jmsMessageDrivenEndpoint = new JmsMessageDrivenEndpoint(defaultMessageListenerContainer(), channelPublishingJmsMessageListener());
+	jmsMessageDrivenEndpoint.setOutputChannel(requests());
+	return jmsMessageDrivenEndpoint;
+}
+
+@Bean
+@ServiceActivator(inputChannel = "replies")
+public MessageHandler outgoingReplies() {
+	JmsSendingMessageHandler handler = new JmsSendingMessageHandler(jmsTemplate());
+	handler.setDestinationName("replies");
+	return handler;
+}
+
+@Bean
+@ServiceActivator(inputChannel = "requests", outputChannel = "replies")
+public ChunkResponse serviceActivator(ChunkRequest chunkRequest) throws Exception{
+	return chunkProcessorChunkHandler().handleChunk(chunkRequest);
+}
+
+@Bean
+public ChunkProcessorChunkHandler chunkProcessorChunkHandler() {
+	ChunkProcessorChunkHandler chunkProcessorChunkHandler = new ChunkProcessorChunkHandler();
+	chunkProcessorChunkHandler.setChunkProcessor(new SimpleChunkProcessor(personItemProcessor(), personItemWriter()));
+	return chunkProcessorChunkHandler();
+}
+----
 
 Most of these configuration items should look familiar from the
 master configuration. Slaves do not need access to
@@ -744,8 +1047,8 @@ the `MessageChannelPartitionHandler` and JMS
 configuration:
 
 
-
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <bean id="partitionHandler"
    class="org.springframework.batch.integration.partition.MessageChannelPartitionHandler">
@@ -796,9 +1099,137 @@ configuration:
     class="org.springframework.batch.integration.partition.BeanFactoryStepLocator" />
 ----
 
+.Java Configuration
+[source, java, role="javaContent"]
+----
+@Bean
+public PartitionHandler partitionHandler() {
+	MessageChannelPartitionHandler partitionHandler = new MessageChannelPartitionHandler();
+	partitionHandler.setStepName("step1");
+	partitionHandler.setGridSize(3);
+	partitionHandler.setReplyChannel(outboundReplies());
+	MessagingTemplate template = new MessagingTemplate();
+	template.setDefaultChannel(outboundRequests());
+	template.setReceiveTimeout(100000);
+	partitionHandler.setMessagingOperations(template);
+	return partitionHandler;
+}
+
+@Bean
+public DirectChannel outboundRequests() {
+	return new DirectChannel();
+}
+
+@Bean
+@ServiceActivator(inputChannel = "outboundRequests")
+public MessageHandler outboundRequestsJmsSendingHandler() {
+	JmsSendingMessageHandler handler = new JmsSendingMessageHandler(jmsTemplate());
+	handler.setDestinationName("requestsQueue");
+	return handler;
+}
+
+@Bean
+public DirectChannel inboundRequests() {
+	return new DirectChannel();
+}
+
+@Bean
+public DefaultMessageListenerContainer outBoundRequestsListenerContainer() {
+	DefaultMessageListenerContainer defaultMessageListenerContainer = new DefaultMessageListenerContainer();
+	defaultMessageListenerContainer.setDestinationName("requestsQueue");
+	return defaultMessageListenerContainer;
+}
+
+@Bean
+public ChannelPublishingJmsMessageListener outBoundRequestsJmsMessageListener() {
+	ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener = new  ChannelPublishingJmsMessageListener();
+	return channelPublishingJmsMessageListener;
+}
+
+@Bean
+public JmsMessageDrivenEndpoint outBoundRequestsAdapter() {
+	JmsMessageDrivenEndpoint jmsMessageDrivenEndpoint = new JmsMessageDrivenEndpoint(outBoundRequestsListenerContainer(), outBoundRequestsJmsMessageListener());
+	jmsMessageDrivenEndpoint.setOutputChannel(inboundRequests());
+	return jmsMessageDrivenEndpoint;
+}
+
+@Bean
+public StepExecutionRequestHandler stepExecutionRequestHandler() {
+	StepExecutionRequestHandler stepExecutionRequestHandler = new StepExecutionRequestHandler();
+	stepExecutionRequestHandler.setJobExplorer(jobExplorer());
+	stepExecutionRequestHandler.setStepLocator(stepLocator());
+	return stepExecutionRequestHandler;
+}
+
+@Bean
+@ServiceActivator(inputChannel = "inboundRequests", outputChannel = "outboundStaging")
+public StepExecutionRequestHandler serviceActivator() throws Exception{
+	return stepExecutionRequestHandler();
+}
+
+@Bean
+public DirectChannel outboundStaging() {
+	return new DirectChannel();
+}
+
+@Bean
+@ServiceActivator(inputChannel = "outboundStaging")
+public MessageHandler outboundStagingJmsSendingHandler() {
+	JmsSendingMessageHandler handler = new JmsSendingMessageHandler(jmsTemplate());
+	handler.setDestinationName("stagingQueue");
+	return handler;
+}
+
+@Bean
+public DirectChannel inboundStaging() {
+	return new DirectChannel();
+}
+
+@Bean
+public DefaultMessageListenerContainer inboundStagingListenerContainer() {
+	DefaultMessageListenerContainer defaultMessageListenerContainer = new DefaultMessageListenerContainer();
+	defaultMessageListenerContainer.setDestinationName("stagingQueue");
+	return defaultMessageListenerContainer;
+}
+
+@Bean
+public ChannelPublishingJmsMessageListener inboundStagingJmsMessageListener() {
+	ChannelPublishingJmsMessageListener channelPublishingJmsMessageListener = new  ChannelPublishingJmsMessageListener();
+	return channelPublishingJmsMessageListener;
+}
+
+@Bean
+public JmsMessageDrivenEndpoint inboundStagingAdapter() {
+	JmsMessageDrivenEndpoint jmsMessageDrivenEndpoint = new JmsMessageDrivenEndpoint(inboundStagingListenerContainer(), inboundStagingJmsMessageListener());
+	jmsMessageDrivenEndpoint.setOutputChannel(inboundStaging());
+	return jmsMessageDrivenEndpoint;
+}
+
+@Bean
+@ServiceActivator(inputChannel = "inboundStaging")
+public MessageHandler partitioningMessageHandler() throws Exception{
+	AggregatorFactoryBean aggregatorFactoryBean = new AggregatorFactoryBean();
+	aggregatorFactoryBean.setProcessorBean(partitioningMessageHandler());
+	aggregatorFactoryBean.setOutputChannel(outboundReplies());
+	...
+	return aggregatorFactoryBean.getObject();
+}
+
+@Bean
+public QueueChannel outboundReplies() {
+	return new QueueChannel();
+}
+
+@Bean
+public BeanFactoryStepLocator stepLocator() {
+		return new BeanFactoryStepLocator();
+}
+----
+
 You must also ensure that the partition `handler` attribute maps to the `partitionHandler` bean, as shown in the following example:
 
-[source, xml]
+.XML Configuration
+[source, xml, role="xmlContent"]
 ----
 <job id="personJob">
   <step id="step1.master">
@@ -806,4 +1237,16 @@ You must also ensure that the partition `handler` attribute maps to the `partiti
     ...
   </step>
 </job>
+----
+
+.Java Configuration
+[source, java, role="javaContent"]
+----
+	public Job personJob() {
+		return jobBuilderFactory.get("personJob")
+				.start(stepBuilderFactory.get("step1.master")
+						.partitioner(partitionHandler())
+						.build())
+				.build();
+	}
 ----
