--- a/spring-batch-docs/asciidoc/common-patterns.adoc
+++ b/spring-batch-docs/asciidoc/common-patterns.adoc
@@ -99,7 +99,7 @@ public class PoisonPillItemWriter implements ItemWriter<T> {
 
     public void write(T item) throws Exception {
         if (isPoisonPill(item)) {
-            throw new PoisonPillException("Posion pill detected: " + item);
+            throw new PoisonPillException("Poison pill detected: " + item);
        }
     }
 }
